# fpodms-sync

./: .gitignore  README.md  extract.py  mkdocs.yml  pyproject.toml  requirements.txt  sync-students.py  sync-students.sh
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml
.trunk/: trunk.yaml
docs/: index.md
fpodms_sync/: extract.py  sync-students.py  sync-students.sh
src/fpodms_sync/: extract.py  sync_students.py
tests/: test_fpodms_sync.py
