[project]
name = ""
version = ""
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = ["fpodms>=2.0.0", "pandas>=1.5.1", "google-cloud-storage>=2.5.0"]
requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
extract = { call = "fpodms_sync.extract:main" }
sync-students = { call = "fpodms_sync.sync_students:main" }
post_lock = { shell = "pdm export -f requirements > requirements.txt" }
